--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
     "colors": "~0.6.0-1",
     "batchflow": "~0.2.0",
     "vcsurl": "0.0.1",
-    "string": "~1.1.0"
+    "string": "~1.1.0",
+    "cheerio": "~0.10.1",
+    "fs-extra": "~0.3.1",
+    "path-extra": "0.0.3",
+    "ms": "~0.3.0",
+    "optimist": "~0.3.5"
   },
   "devDepdencies": {},
   "scripts": {
