--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git://github.com/jprichardson/npm-research.git"
   },
   "keywords": [
     "npm",
