--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-research",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Nice little utility to help you research NPM packages.",
   "homepage": [
     ""
@@ -29,14 +29,14 @@
     "open": "0.0.2",
     "request": "~2.11.4",
     "colors": "~0.6.0-1",
-    "batchflow": "~0.2.0",
-    "vcsurl": "0.0.1",
+    "batchflow": "~0.3.0",
     "string": "~1.1.0",
-    "cheerio": "~0.10.1",
+    "cheerio": "0.10.1",
     "fs-extra": "~0.3.1",
     "path-extra": "0.0.3",
     "ms": "~0.3.0",
-    "optimist": "~0.3.5"
+    "optimist": "~0.3.5",
+    "vcsurl": "~0.1.0"
   },
   "devDepdencies": {},
   "scripts": {
